--- a/App/templates/registrer.html
+++ b/App/templates/registrer.html
@@ -6,11 +6,11 @@
 </head>
 <body>
     <h2>Registra't</h2>
-    <form method="POST">
-        Nom complet: <input type="text" name="nom"><br>
-        Email: <input type="email" name="email"><br>
-        Contrasenya: <input type="password" name="contrasenya"><br>
-        <button type="submit">Registrar</button>
-    </form>
+    <form action="/register" method="POST">
+        <!-- Aquí van los campos del formulario -->
+        <input type="text" name="email" placeholder="Email" required>
+        <input type="password" name="password" placeholder="Contraseña" required>
+        <input type="submit" value="Registrar">
+    </form>    
 </body>
 </html>
